         svg.[c|h],tape.c,ui.c,ui/{gtk/gtkui.c,ui.h,widget/widget.c,
         win32/win32ui.c},z80/{coretest.c,z80_checks.h,z80_ops.c}: capture BASIC
         video functions to SVG file (patch #322) (Stefano Bodrato).
20150824 ui/widget/widget.c: remove unused function (Sergio).
20151008 sound.c: remove DC offset compensation as it results in inaccurate
         output when envelopes are used and is not required when using the
         filtered sound output which removes the DC offset anyway (patch #339)
         (Matthew Westcott and Fred)
20151020 z80/z80_checks.h: fix segfault due to inconsistent SETUP_CHECK() and
         CHECK() ordering (UB880D; thanks, Guesser).
20151108 hacking/{code_beautifiers.txt,uncrustify.cfg}: document Uncrustify and
         Indent code beautifiers (patch #340) (Sergio).
20151108 man/fuse.1: fix pal-tv2x and Pentagon ROMs command line options
         (Sergio).
20151109 configure.ac,data/{Makefile.am,shell-completion/bash/fuse}: support 
         bash completion (patch #335) (Sergio).
20151115 hacking/Makefile.am: add missing files (Sergio).
20151115 data/{Makefile.am,shell-completion/diff_options.sh}: add a script to
         keep options in sync (Sergio).
20151115 hacking/ChangeLog,man/fuse.1: add missing --drive-didaktik80[a|b]-type
         options (Sergio).
20151122 peripherals/if1.c,settings.[dat|pl]: more from rename 'Interface I' to
         'Interface 1' (thanks, Stuart) (Sergio).
20151130 ui/win32/options-resource.pl: remove redundant argument on button
         creation (Sergio).
20151130 ui/win32/win32ui.c: fix compilation with mingwrt 4.0+ (Kirben).
20151208 sound/blipbuffer.h: remove second inline declaration of
         blip_buffer_samples_avail() (Sergio).
20151208 ui/gtk/pokemem.c: do not use deprecated gtk_tree_view_set_rules_hint()
         on GTK+ 3 UI (Sergio).
20151208 ui/gtk/gtkmouse.c: replace deprecated gdk_cursor_new() on GTK+ 3 UI
         (Sergio).